# chat_grid

./: .gitignore  AGENTS.md  README.md  item.md  refactor.md
client/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
deploy/: README.md
server/: README.md  config.example.toml  pyproject.toml  run_server.sh
server/app/: auth_service.py  client.py  config.py  item_catalog.py  item_service.py  item_type_handlers.py  item_types.py  models.py  server.py
server/app/items/: __init__.py  clock.py  dice.py  helpers.py  piano.py  radio.py  registry.py  sound_policy.py  wheel.py  widget.py
server/app/items/types/: plugin_helpers.py
server/app/items/types/clock/: __init__.py  actions.py  definition.py  module.py  plugin.py  time_format.py  validator.py
server/app/items/types/dice/: __init__.py  module.py  plugin.py
server/app/items/types/piano/: __init__.py  module.py  plugin.py
server/app/items/types/radio_station/: __init__.py  actions.py  definition.py  module.py  plugin.py  validator.py
server/app/items/types/wheel/: __init__.py  module.py  plugin.py
server/app/items/types/widget/: __init__.py  definition.py  module.py  plugin.py  validator.py
server/tests/: test_auth_service.py  test_config.py  test_http_session_cookie.py  test_item_persistence.py  test_item_plugin_contract.py  test_item_schema_ui.py  test_item_use_cooldown.py  test_models.py  test_nickname_uniqueness.py  test_nickname_updates.py  test_origin_policy.py  test_radio_station_validator.py  test_server_message_handling.py
(+78 files in other folders)
